--- a/css/styles.css
+++ b/css/styles.css
@@ -17,19 +17,26 @@ html, body {
 	overflow: hidden;
 }
 #dodge {
-	width: 800px;
-	height: 600px;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 	margin: auto;
 	background: #123;
 	border: 1px solid #ddd;
 }
 .controller {
 	position: absolute;
-	top: 200px;
-	left: 300px;
+	right: 50%;
+	bottom: 50%;
 	width: 200px;
 	height: 200px;
 	padding: 20px;
+	margin-right: -100px;
+	margin-bottom: -100px;
 	color: #fff;
 	text-align: center;
 	background: rgba(16, 16, 16, .5);
