--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -105,7 +105,7 @@ html, body {
 		height: 1em;
 		font-size: 16px;
 		vertical-align: middle;
-		&:before， &:after {
+		&:before, &:after {
 			content: '\0020';
 			position: absolute;
 			top: 0;
